--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@ body{
   margin: 0;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
-  font-size: 2rem;
+  font-size: 1.15rem;
   background-color: #d9e4dd;
 }
 p{
@@ -12,26 +12,28 @@ p{
 hr{
   border: dotted #fff 6px;
   border-bottom: none;
-  width: 6%;
+  width: 7%;
   margin:50px auto;
 }
 .intro{
   width: 70%;
-  font-size: 20px;
+  font-size: 2rem;
   margin: auto;
   margin-top: 20px;
   margin-bottom: 10px;
 }
-.text{
+.bio{
   width: 60%;
   margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
   font-family: 'Raleway', sans-serif;
   font-weight: normal;
 }
 h1{
 margin: 100px auto 0 auto;
 font-family: 'Sacramento', cursive;
-font-size: 5.325rem;
+font-size: 5.625rem;
 color: #0e918c;
 }
 
@@ -40,21 +42,24 @@ color: #0e918c;
   font-family: 'Piedra', cursive;
   text-decoration: underline;
   font-weight: normal;
-  font-size: 32px;
+  font-size: 2.65rem;;
 }
 
+.bottom{
+  font-family: cursive,monospace,sans-serif,fantasy;
+}
 
 h3{
   font-family: 'Raleway', sans-serif;
   color: #03c4a1;
-  font-size: 25px; 
+  font-size: 1.625rem;
 }
 
 
 h2{
     font-family: 'Piedra', sans-serif;
     color: #41aea9;
-    font-size: 35px;
+    font-size: 25px;
     font-weight: normal;
 }
 h4{
@@ -86,8 +91,8 @@ h4{
   left: 50%;
 }
 #me-image{
-  width: 18%;
-  height: 18%;
+  width: 15%;
+  height: 15%;
 }
 
 .middle-container{
@@ -96,10 +101,10 @@ h4{
 .bottom-container{
   background-color: #03c4a1;
   padding: 50px 0 20px;
+  font-size: 1.625rem;
 }
 a{
-  color: #9bdeac; 
-  font-size: 2.25rem;
+  color: #9bdeac;
   font-family: 'Raleway', sans-serif;
   margin: 10px 20px;
   text-decoration: none;
@@ -109,16 +114,12 @@ a:hover{
 }
 
 .skill-row{
-  width: 60%;
+  width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
 }
 
-.copyright{
-  color: #f4f6ff;
-  font-size: 0.65rem;
-  padding: 20px 0;
-}
+
 
 .skill-now{
   width: 25%;
@@ -142,9 +143,8 @@ a:hover{
   margin-top: 50px;
 }
 .bottom{
-  width: 90%;
+  width: 70%;
   margin: 40px auto 60px;
-  font-family: mono-space,serif,sans-serif;   
 }
 
 .btn{
@@ -169,4 +169,9 @@ a:hover{
 .btn:active {
 	position:relative;
 	top:1px;
+}
+.copyright{
+  color: #f4f6ff;
+  font-size: 0.70rem;
+  padding: 20px 0;
 }
